--- a/notes/0.6.0.markdown
+++ b/notes/0.6.0.markdown
@@ -1,11 +1,13 @@
 ### Changes
 
-Dependencies to test libraries are removed. Please add `libraryDependencies`
-according to `doctestTestFramework`. Also `doctestWithDependencies` key is
-removed.
-
 * Add support for uTest. Contributed by @frgomes. #78
 * Remove dependencies as preparation for ScalaJS. Contributed by @frgomes. #80
 * Remove dependencies from test libraries. Contributed by @frgomes #85
+* ScalaTest >= 3.1.0 support #92
+
+### Migration from 0.5.0
+
+`doctestWithDependencies` key is removed. Please add `libraryDependencies` according to
+`doctestTestFramework` manually.
 
 Please try it out, and send feedback to https://github.com/tkawachi/sbt-doctest/issues
